# shorten-cli

./: Cargo.toml  README.md  cli.toml.example
src/: main.rs
